--- a/css/style.css
+++ b/css/style.css
@@ -1201,7 +1201,29 @@ fieldset {
             background: rgba(153, 127, 127, 0.405);
             margin: 30px auto 45px;
             box-sizing: border-box;
-            box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1); }
+            box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.05);
+            position: relative;
+            overflow: hidden; }
+            .department .inner .wrap .team article .pic .txt {
+              width: 100%;
+              height: 100%;
+              padding: 20px;
+              position: absolute;
+              top: -100%;
+              left: 0px;
+              background-color: rgba(0, 0, 0, 0.7);
+              border-radius: 50%;
+              transition: 0.5s;
+              text-align: center; }
+              .department .inner .wrap .team article .pic .txt p {
+                font: bold 18px/1 'Spartan';
+                color: #fff;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%); }
+            .department .inner .wrap .team article .pic:hover .txt {
+              top: 0%; }
           .department .inner .wrap .team article:nth-of-type(1) .pic {
             background-image: url("../img/mem01.jpg");
             background-size: cover;
