--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -166,7 +166,29 @@
 						background: rgba(153, 127, 127, 0.405);
 						margin: 30px auto 45px;
 						box-sizing: border-box;
-						box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1);
+						box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.05);
+						position: relative;
+						overflow: hidden;
+
+						.txt {
+							width: 100%; height: 100%; padding: 20px;
+							position: absolute; top: -100%; left: 0px;
+							background-color: rgba(0, 0, 0, 0.7);
+							border-radius: 50%; 
+							transition: 0.5s;
+							
+							text-align: center;
+
+							p {
+								
+								font: bold 18px/1 'Spartan'; color: #fff;
+								position: absolute;
+								top: 50%; left: 50%; transform: translate(-50%, -50%);
+							}
+						}
+						&:hover .txt {
+							top: 0%;
+						}
 
 					}
 					&:nth-of-type(1) .pic{
