--- a/css/style.css
+++ b/css/style.css
@@ -1832,8 +1832,7 @@ fieldset {
 
 #header {
   width: 100%;
-  background: #fff;
-  overflow: hidden; }
+  background: #fff; }
   #header .inner {
     width: 1180px;
     height: 100px;
@@ -1854,9 +1853,9 @@ fieldset {
         content: "";
         display: block;
         clear: both; }
-      #header .inner .menuWeb #gnb li {
+      #header .inner .menuWeb #gnb > li {
         float: left; }
-        #header .inner .menuWeb #gnb li a {
+        #header .inner .menuWeb #gnb > li > a {
           display: block;
           padding: 10px 20px;
           font: 400 12px/1 "Spartan";
@@ -1864,7 +1863,7 @@ fieldset {
           transition: 0.5s;
           box-sizing: border-box;
           border-top: 1px solid transparent; }
-          #header .inner .menuWeb #gnb li a:nth-of-type(1)::after {
+          #header .inner .menuWeb #gnb > li > a:nth-of-type(1)::after {
             content: "";
             display: inline-block;
             position: Absolute;
@@ -1874,7 +1873,44 @@ fieldset {
             width: 1px;
             height: 100%;
             background: #e0e0e0; }
-        #header .inner .menuWeb #gnb li:hover a {
+        #header .inner .menuWeb #gnb > li .sub {
+          width: 1180px;
+          height: 300px;
+          position: absolute;
+          top: 51px;
+          right: 0;
+          background: #fff;
+          display: none;
+          z-index: 3; }
+          #header .inner .menuWeb #gnb > li .sub .left {
+            width: 30%;
+            height: 100%;
+            background: lightgreen;
+            float: left; }
+          #header .inner .menuWeb #gnb > li .sub .right {
+            width: 70%;
+            height: 100%;
+            background: #fff;
+            float: right; }
+          #header .inner .menuWeb #gnb > li .sub::before {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: -100%;
+            background: lightgreen; }
+          #header .inner .menuWeb #gnb > li .sub::after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            right: -100%;
+            background: inherit; }
+        #header .inner .menuWeb #gnb > li:hover a {
           color: #d8778f; }
     #header .inner .menuWeb .util {
       position: absolute;
@@ -2117,7 +2153,7 @@ fieldset {
         display: block;
         width: 50px;
         height: 2px;
-        background: #111;
+        background: #dd7b8b;
         position: absolute;
         left: -70px;
         top: 10px; }
@@ -2234,7 +2270,7 @@ fieldset {
           color: #111; }
         #product .inner .wrap .box1 span {
           font: 17px/1.5 "Spartan";
-          color: #777; }
+          color: #dd7b8b; }
       #product .inner .wrap .box2 {
         width: 560px;
         padding-bottom: 40px;
@@ -2253,7 +2289,7 @@ fieldset {
             margin-bottom: 15px; }
           #product .inner .wrap .box2 .txt_box span {
             font: 15px/1.5 "Spartan";
-            color: #777; }
+            color: #dd7b8b; }
       #product .inner .wrap .box3 {
         width: 560px;
         margin-top: 40px;
@@ -2271,7 +2307,7 @@ fieldset {
             margin-bottom: 15px; }
           #product .inner .wrap .box3 .txt_box span {
             font: 15px/1.5 "Spartan";
-            color: #777; }
+            color: #dd7b8b; }
 
 #brand {
   width: 100%;
@@ -2363,7 +2399,7 @@ fieldset {
     #banner .inner h1 {
       display: inline-block;
       text-align: left;
-      font: bold 35px/1.7 "spartan";
+      font: bold 33px/1.7 "spartan";
       color: #dd7b8b;
       margin: 40px 0; }
     #banner .inner .btn_box {
@@ -2391,22 +2427,49 @@ fieldset {
         color: #111;
         margin-left: 15px; }
 
-#comment {
+#podcasts {
   width: 100%;
-  padding: 150px 0;
+  padding: 170px 0;
   background: rgba(255, 252, 251, 0.8); }
-  #comment .inner {
+  #podcasts .inner {
     width: 1180px;
     margin: 0 auto;
     position: relative; }
-    #comment .inner h1 {
-      font: bold 24px "Spartan";
-      color: #555;
-      text-align: center;
-      margin-bottom: 50px;
-      text-align: center; }
-    #comment .inner .wrap {
-      width: 100%; }
+    #podcasts .inner h1 {
+      text-align: right;
+      font: bold 40px/1 "Spartan";
+      color: #dd7b8b;
+      margin-right: 50px; }
+    #podcasts .inner .wrap {
+      width: 100%;
+      margin-top: 60px;
+      padding: 0px 50px; }
+      #podcasts .inner .wrap article {
+        display: inline-block;
+        width: 360px;
+        height: 360px;
+        border: 1px solid #555;
+        border-radius: 50%;
+        text-align: center;
+        margin-left: 30px;
+        transition: 0.7s; }
+        #podcasts .inner .wrap article:nth-of-type(1) {
+          position: relative; }
+        #podcasts .inner .wrap article:nth-of-type(2) {
+          position: absolute;
+          left: 380px; }
+        #podcasts .inner .wrap article:nth-of-type(3) {
+          position: absolute;
+          left: 710px; }
+        #podcasts .inner .wrap article:hover {
+          border-color: #dd7b8b;
+          color: #dd7b8b; }
+        #podcasts .inner .wrap article .txt {
+          transform: translate(-50%, -50%);
+          margin: 0 auto;
+          position: absolute;
+          top: 50%;
+          left: 50%; }
 
 #footer {
   width: 100%;
