--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,7 +37,7 @@ $mobile: 539px;
 #header {
 	width: 100%;
 	background: #fff;
-	overflow: hidden;
+	// overflow: hidden;
 
 	.inner {
 		width: 1180px;
@@ -67,10 +67,10 @@ $mobile: 539px;
 					clear: both;
 				}
 
-				li {
+				> li {
 					float: left;
 
-					a {
+					> a {
 						display: block;
 						padding: 10px 20px;
 						font: 400 12px/1 "Spartan";
@@ -91,7 +91,49 @@ $mobile: 539px;
 							background: #e0e0e0;
 						}
 					}
+					.sub {
+						width: 1180px;
+						height: 300px;
+						position: absolute;
+						top: 51px;
+						right: 0;
+						background: #fff;
+						display: none;
+						z-index: 3;
 
+						.left {
+							width: 30%;
+							height: 100%;
+							background: lightgreen;
+							float: left;
+						}
+						.right {
+							width: 70%;
+							height: 100%;
+							background: #fff;
+							float: right;
+						}
+						&::before {
+							content: "";
+							display: block;
+							width: 100%;
+							height: 100%;
+							position: absolute;
+							top: 0;
+							left: -100%;
+							background: lightgreen;
+						}
+						&::after {
+							content: "";
+							display: block;
+							width: 100%;
+							height: 100%;
+							position: absolute;
+							top: 0;
+							right: -100%;
+							background: inherit;
+						}
+					}
 					&:hover a {
 						color: rgb(216, 119, 143);
 					}
@@ -132,8 +174,8 @@ $mobile: 539px;
 						line-height: 15px;
 						border-right: none;
 
-						> i {
-						}
+						// > i {
+						// }
 					}
 				}
 			}
@@ -414,7 +456,7 @@ $mobile: 539px;
 				display: block;
 				width: 50px;
 				height: 2px;
-				background: #111;
+				background: rgb(221, 123, 139);
 				position: absolute;
 				left: -70px;
 				top: 10px;
@@ -563,7 +605,7 @@ $mobile: 539px;
 				}
 				span {
 					font: 17px/1.5 "Spartan";
-					color: #777;
+					color: rgb(221, 123, 139);
 				}
 			}
 			.box2 {
@@ -587,7 +629,7 @@ $mobile: 539px;
 					}
 					span {
 						font: 15px/1.5 "Spartan";
-						color: #777;
+						color: rgb(221, 123, 139);
 					}
 				}
 			}
@@ -611,7 +653,7 @@ $mobile: 539px;
 					}
 					span {
 						font: 15px/1.5 "Spartan";
-						color: #777;
+						color: rgb(221, 123, 139);
 					}
 				}
 			}
@@ -668,7 +710,6 @@ $mobile: 539px;
 					letter-spacing: 1.3px;
 					position: relative;
 
-					
 					.brand_arrow {
 						width: 18px;
 						height: 18px;
@@ -727,8 +768,6 @@ $mobile: 539px;
 	width: 100%;
 	padding: 80px 0;
 	background: #eee;
-	
-
 
 	.inner {
 		width: 1180px;
@@ -739,7 +778,7 @@ $mobile: 539px;
 		h1 {
 			display: inline-block;
 			text-align: left;
-			font: bold 35px/1.7 "spartan";
+			font: bold 33px/1.7 "spartan";
 			color: rgb(221, 123, 139);
 			margin: 40px 0;
 		}
@@ -770,18 +809,15 @@ $mobile: 539px;
 				box-sizing: border-box;
 				color: #111;
 				margin-left: 15px;
-				
-			
 			}
-
 		}
 	}
 }
 
 //  comment ---------------------------------------------------------------
-#comment {
+#podcasts {
 	width: 100%;
-	padding: 150px 0;
+	padding: 170px 0;
 	background: rgba(255, 252, 251, 0.8);
 
 	.inner {
@@ -790,12 +826,53 @@ $mobile: 539px;
 		position: relative;
 
 		h1 {
-			@include title();
-			text-align: center;
+			text-align: right;
+			font: bold 40px/1 "Spartan";
+			color: rgb(221, 123, 139);
+			margin-right: 50px;
 		}
 
 		.wrap {
 			width: 100%;
+			margin-top: 60px;
+			padding: 0px 50px;
+
+			article {
+				display: inline-block;
+				// float: left;
+				width: 360px;
+				height: 360px;
+				border: 1px solid #555;
+				border-radius: 50%;
+				text-align: center;
+				margin-left: 30px;
+				transition: 0.7s;
+
+				&:nth-of-type(1) {
+					position: relative;
+				}
+				&:nth-of-type(2) {
+					position: absolute;
+					left: 380px;
+					// margin-left: 0;
+				}
+				&:nth-of-type(3) {
+					position: absolute;
+					left: 710px;
+					// margin-left: 0;
+				}
+				&:hover {
+					border-color: rgb(221, 123, 139);
+					color: rgb(221, 123, 139);
+				}
+				.txt {
+					transform: translate(-50%, -50%);
+					margin: 0 auto;
+					position: absolute;
+					top: 50%;
+					left: 50%;
+				}
+			}
 		}
 	}
 }
