--- a/css/style.css
+++ b/css/style.css
@@ -814,12 +814,8 @@ fieldset {
 .join {
   width: 100%; }
   .join .sub_visual {
-    background-image: url(../img/j4.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
     /* background-attachment: fixed; */
-    opacity: 0.8; }
+    background: #111; }
   .join .inner {
     width: 1180px;
     padding: 0 150px;
@@ -1008,19 +1004,6 @@ fieldset {
         border-bottom: 2px solid #333;
         margin-bottom: 30px;
         padding-bottom: 30px; }
-    .join .inner textarea {
-      resize: none;
-      width: 100%;
-      height: 120px;
-      padding: 20px;
-      font: 14px/1.6 "STIX Two Text";
-      color: #888;
-      border: 1px solid #aaa;
-      margin-bottom: 20px; }
-      .join .inner textarea:nth-of-type(2) {
-        border: 1px solid #fff;
-        background: #efefef;
-        padding: 15px; }
     .join .inner h3 {
       display: inline-block;
       font: normal 10px/1 "arial";
