--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -10,12 +10,13 @@
 	width: 100%;
 
 	.sub_visual {
-		background-image: url(../img/j4.jpg);
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: center center;
+		// background-image: url(../img/j4.jpg);
+		// background-size: cover;
+		// background-repeat: no-repeat;
+		// background-position: center center;
 		/* background-attachment: fixed; */
-		opacity: 0.8;
+		// opacity: 0.8;
+		background: #111;
 	}
 	.inner {
 		width: 1180px;
@@ -190,6 +191,11 @@
 			width: 100%;
 			border-collapse: collapse;
 			margin-bottom: 20px;
+			tr{
+				th{
+					
+				}
+			}
 
 			input[type="text"],
 			input[type="password"] {
@@ -270,22 +276,7 @@
 					padding-bottom: 30px;
 				}
 			}
-			textarea {
-				resize: none;
-				width: 100%;
-				height: 120px;
-				padding: 20px;
-				font: 14px/1.6 "STIX Two Text";
-				color: #888;
-				border: 1px solid #aaa;
-				margin-bottom: 20px;
-
-				&:nth-of-type(2) {
-					border: 1px solid #fff;
-					background: #efefef;
-					padding: 15px;
-				}
-			}
+			
 			h3 {
 				display: inline-block;
 				font: normal 10px/1 "arial";
@@ -335,6 +326,7 @@
 						padding: 5px;
 						/* border-right: 1px dashed #bbb; */
 						text-align: left;
+
 
 						span {
 							font: 600 11px/1 "Spartan";
