--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=STIX+Two+Text:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap");
 /*
 "Spartan"
 'STIX Two Text'
@@ -2048,9 +2049,11 @@ fieldset {
 #visual {
   width: 100%;
   height: calc(100vh - 100px);
-  background: url(../img/main2.jpg) no-repeat center/cover;
   overflow: hidden;
   position: relative; }
+  #visual video {
+    width: 100%;
+    filter: grayscale(1); }
   #visual .txt {
     width: 60%;
     position: absolute;
@@ -2058,12 +2061,13 @@ fieldset {
     left: 5%;
     z-index: 2; }
     #visual .txt h1 {
-      font: 300 85px/1 "Spartan";
+      font: 300 80px/1 "Playfair Display";
       color: #fff;
-      margin-bottom: 30px; }
+      margin-bottom: 40px;
+      letter-spacing: 1.7px; }
     #visual .txt p {
-      font: 27px/1.5 "Spartan";
-      letter-spacing: 1.5px;
+      font: 25px/1.5 "Spartan";
+      letter-spacing: 1.7px;
       color: #fff;
       margin-bottom: 70px; }
   #visual .visual_box {
@@ -2109,42 +2113,45 @@ fieldset {
       width: 300px; }
 
 #popup {
-  width: 400px;
-  height: 300px;
-  background: rgba(255, 255, 255, 0.7);
+  width: 600px;
+  height: 350px;
+  background: rgba(0, 0, 0, 0.8);
   padding: 20px;
   box-sizing: border-box;
-  color: #111;
-  position: absolute;
-  top: 100px;
-  right: 10%;
+  color: #fff;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   box-shadow: 5px 5px 5px 10px rgba(0, 0, 0, 0.03);
   z-index: 2; }
   #popup .pop_inner {
     width: 100%;
     height: 100%;
-    border: 2px solid #111;
     padding: 40px; }
     #popup .pop_inner h1 {
       text-align: center;
-      font: bold 30px/1 "Noto Sans KR"; }
+      font: bold 30px/1 "Spartan";
+      letter-spacing: 1.5px; }
     #popup .pop_inner .pop_content {
       width: 100%;
       min-height: 150px;
-      padding-top: 50px;
-      text-align: center; }
+      padding-top: 40px;
+      text-align: center;
+      font: 500 14px/1.5 "Noto Sans KR";
+      letter-spacing: 1.2px; }
     #popup .pop_inner::after {
       content: "";
       display: block; }
     #popup .pop_inner .wrap {
       float: left; }
       #popup .pop_inner .wrap label {
-        font: bold 13px/1 "Noto Sans KR";
+        font: bold 13px/1 "Spartan";
         margin-left: 4px; }
     #popup .pop_inner .close {
       float: right;
       font: 14px/1 "Noto Sans KR";
-      color: #111; }
+      color: #fff; }
 
 #news {
   width: 100%;
@@ -2278,14 +2285,21 @@ fieldset {
     #product .inner .wrap {
       width: 100%;
       margin-top: 70px; }
+      #product .inner .wrap .pic:hover {
+        transform: scale(1.3); }
       #product .inner .wrap .box1 {
         width: 560px;
         float: left;
         margin-right: 30px; }
-        #product .inner .wrap .box1 .pic {
+        #product .inner .wrap .box1 .pic_wrap {
           width: 100%;
-          height: 350px;
-          background: url(../img/product4.jpg) no-repeat center/cover; }
+          height: 100%;
+          overflow: hidden; }
+          #product .inner .wrap .box1 .pic_wrap .pic {
+            width: 100%;
+            height: 350px;
+            background: url(../img/product4.jpg) no-repeat center/cover;
+            transition: 0.5s; }
         #product .inner .wrap .box1 p {
           font: bold 20px/1.5 "Spartan";
           margin-top: 30px;
@@ -2299,11 +2313,16 @@ fieldset {
         padding-bottom: 40px;
         border-bottom: 2px solid #888;
         float: right; }
-        #product .inner .wrap .box2 .pic {
+        #product .inner .wrap .box2 .pic_wrap {
           width: 170px;
           height: 130px;
-          background: url(../img/product5.jpg) no-repeat center/cover;
-          float: right; }
+          float: right;
+          overflow: hidden; }
+          #product .inner .wrap .box2 .pic_wrap .pic {
+            width: 100%;
+            height: 100%;
+            background: url(../img/product5.jpg) no-repeat center/cover;
+            transition: 0.5s; }
         #product .inner .wrap .box2 .txt_box {
           margin-top: 20px; }
           #product .inner .wrap .box2 .txt_box p {
@@ -2317,11 +2336,16 @@ fieldset {
         width: 560px;
         margin-top: 40px;
         float: right; }
-        #product .inner .wrap .box3 .pic {
+        #product .inner .wrap .box3 .pic_wrap {
           width: 170px;
           height: 130px;
-          background: url(../img/product6.jpg) no-repeat center/cover;
-          float: right; }
+          float: right;
+          overflow: hidden; }
+          #product .inner .wrap .box3 .pic_wrap .pic {
+            width: 100%;
+            height: 100%;
+            background: url(../img/product6.jpg) no-repeat center/cover;
+            transition: 0.5s; }
         #product .inner .wrap .box3 .txt_box {
           margin-top: 20px; }
           #product .inner .wrap .box3 .txt_box p {
