--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=STIX+Two+Text:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap");
 
 /*
 "Spartan"
@@ -298,10 +299,14 @@ $mobile: 539px;
 #visual {
 	width: 100%;
 	height: calc(100vh - 100px);
-	background: url(../img/main2.jpg) no-repeat center/cover;
+	// background: url(../img/main2.jpg) no-repeat center/cover;
 	overflow: hidden;
 	position: relative;
 
+	video {
+		width: 100%;
+		filter: grayscale(1);
+	}
 	.txt {
 		width: 60%;
 		position: absolute;
@@ -310,13 +315,14 @@ $mobile: 539px;
 		z-index: 2;
 
 		h1 {
-			font: 300 85px/1 "Spartan";
+			font: 300 80px/1 "Playfair Display";
 			color: #fff;
-			margin-bottom: 30px;
+			margin-bottom: 40px;
+			letter-spacing: 1.7px;
 		}
 		p {
-			font: 27px/1.5 "Spartan";
-			letter-spacing: 1.5px;
+			font: 25px/1.5 "Spartan";
+			letter-spacing: 1.7px;
 			color: #fff;
 			margin-bottom: 70px;
 		}
@@ -377,33 +383,37 @@ $mobile: 539px;
 }
 // popup ----------------------------------------------------------------
 #popup {
-	width: 400px;
-	height: 300px;
-	background: rgba(255, 255, 255, 0.7);
+	width: 600px;
+	height: 350px;
+	background: rgba(0, 0, 0, 0.8);
 	padding: 20px;
 	box-sizing: border-box;
-	color: #111;
-	position: absolute;
-	top: 100px;
-	right: 10%;
+	color: #fff;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	box-shadow: 5px 5px 5px 10px rgba(0, 0, 0, 0.03);
 	z-index: 2;
 	.pop_inner {
 		width: 100%;
 		height: 100%;
-		border: 2px solid #111;
+		// border: 2px solid #fff;
 		padding: 40px;
 
 		h1 {
 			text-align: center;
-			font: bold 30px/1 "Noto Sans KR";
+			font: bold 30px/1 "Spartan";
+			letter-spacing: 1.5px;
 		}
 
 		.pop_content {
 			width: 100%;
 			min-height: 150px;
-			padding-top: 50px;
+			padding-top: 40px;
 			text-align: center;
+			font: 500 14px/1.5 "Noto Sans KR";
+			letter-spacing: 1.2px;
 		}
 		&::after {
 			content: "";
@@ -414,14 +424,14 @@ $mobile: 539px;
 			float: left;
 
 			label {
-				font: bold 13px/1 "Noto Sans KR";
+				font: bold 13px/1 "Spartan";
 				margin-left: 4px;
 			}
 		}
 		.close {
 			float: right;
 			font: 14px/1 "Noto Sans KR";
-			color: #111;
+			color: #fff;
 		}
 	}
 }
@@ -602,14 +612,26 @@ $mobile: 539px;
 		.wrap {
 			width: 100%;
 			margin-top: 70px;
+
+			.pic:hover {
+				transform: scale(1.3);
+			}
+
 			.box1 {
 				width: 560px;
 				float: left;
 				margin-right: 30px;
-				.pic {
+				.pic_wrap {
 					width: 100%;
-					height: 350px;
-					background: url(../img/product4.jpg) no-repeat center/cover;
+					height: 100%;
+					overflow: hidden;
+					.pic {
+						width: 100%;
+						height: 350px;
+						background: url(../img/product4.jpg) no-repeat
+							center/cover;
+						transition: 0.5s;
+					}
 				}
 				p {
 					font: bold 20px/1.5 "Spartan";
@@ -627,13 +649,20 @@ $mobile: 539px;
 				padding-bottom: 40px;
 				border-bottom: 2px solid #888;
 				float: right;
-
-				.pic {
+				.pic_wrap {
 					width: 170px;
 					height: 130px;
-					background: url(../img/product5.jpg) no-repeat center/cover;
 					float: right;
+					overflow: hidden;
+					.pic {
+						width: 100%;
+						height: 100%;
+						background: url(../img/product5.jpg) no-repeat
+							center/cover;
+						transition: 0.5s;
+					}
 				}
+
 				.txt_box {
 					margin-top: 20px;
 					p {
@@ -652,12 +681,20 @@ $mobile: 539px;
 				margin-top: 40px;
 				float: right;
 
-				.pic {
+				.pic_wrap {
 					width: 170px;
 					height: 130px;
-					background: url(../img/product6.jpg) no-repeat center/cover;
 					float: right;
+					overflow: hidden;
+					.pic {
+						width: 100%;
+						height: 100%;
+						background: url(../img/product6.jpg) no-repeat
+							center/cover;
+						transition: 0.5s;
+					}
 				}
+
 				.txt_box {
 					margin-top: 20px;
 					p {
