--- a/css/style.css
+++ b/css/style.css
@@ -2113,9 +2113,9 @@ fieldset {
       width: 300px; }
 
 #popup {
-  width: 600px;
-  height: 350px;
-  background: rgba(0, 0, 0, 0.8);
+  width: 650px;
+  height: 410px;
+  background: rgba(0, 0, 0, 0.9);
   padding: 20px;
   box-sizing: border-box;
   color: #fff;
@@ -2135,8 +2135,8 @@ fieldset {
       letter-spacing: 1.5px; }
     #popup .pop_inner .pop_content {
       width: 100%;
-      min-height: 150px;
       padding-top: 40px;
+      margin-bottom: 40px;
       text-align: center;
       font: 500 14px/1.5 "Noto Sans KR";
       letter-spacing: 1.2px; }
@@ -2144,13 +2144,51 @@ fieldset {
       content: "";
       display: block; }
     #popup .pop_inner .wrap {
-      float: left; }
+      width: 100%;
+      text-align: center; }
+      #popup .pop_inner .wrap input[type="text"] {
+        width: 100%;
+        height: 40px;
+        padding-left: 20px;
+        border: 1px solid #fff;
+        margin-bottom: 20px;
+        font: 14px/1 "Spartan"; }
+      #popup .pop_inner .wrap button {
+        width: 100%;
+        height: 40px;
+        border: 1px solid #fff;
+        background: #111;
+        color: #fff;
+        box-sizing: border-box;
+        margin-bottom: 20px; }
+      #popup .pop_inner .wrap input[type="checkbox"] {
+        width: 20px;
+        height: 20px;
+        vertical-align: middle; }
       #popup .pop_inner .wrap label {
-        font: bold 13px/1 "Spartan";
-        margin-left: 4px; }
+        font: 13px/1 "Noto Sans KR";
+        margin-left: 4px;
+        color: #aaa; }
+      #popup .pop_inner .wrap a {
+        display: inline-block;
+        position: absolute;
+        bottom: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+        font: 13px/1 "Noto Sans KR";
+        color: #aaa;
+        border-bottom: 1px solid #aaa; }
     #popup .pop_inner .close {
-      float: right;
-      font: 14px/1 "Noto Sans KR";
+      width: 25px;
+      height: 25px;
+      background: #424249;
+      border-radius: 50%;
+      border: 1px solid #ccc;
+      text-align: center;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font: 14px/25px "Noto Sans KR";
       color: #fff; }
 
 #news {
