--- a/scss/style.scss
+++ b/scss/style.scss
@@ -383,9 +383,9 @@ $mobile: 539px;
 }
 // popup ----------------------------------------------------------------
 #popup {
-	width: 600px;
-	height: 350px;
-	background: rgba(0, 0, 0, 0.8);
+	width: 650px;
+	height: 410px;
+	background: rgba(0, 0, 0, 0.9);
 	padding: 20px;
 	box-sizing: border-box;
 	color: #fff;
@@ -398,7 +398,6 @@ $mobile: 539px;
 	.pop_inner {
 		width: 100%;
 		height: 100%;
-		// border: 2px solid #fff;
 		padding: 40px;
 
 		h1 {
@@ -409,8 +408,9 @@ $mobile: 539px;
 
 		.pop_content {
 			width: 100%;
-			min-height: 150px;
+			// min-height: 130px;
 			padding-top: 40px;
+			margin-bottom: 40px;
 			text-align: center;
 			font: 500 14px/1.5 "Noto Sans KR";
 			letter-spacing: 1.2px;
@@ -421,16 +421,60 @@ $mobile: 539px;
 		}
 
 		.wrap {
-			float: left;
-
+			width: 100%;
+			text-align: center;
+			
+			input[type="text"]{
+				width: 100%;
+				height: 40px;
+				padding-left: 20px;
+				border: 1px solid #fff;
+				margin-bottom: 20px;
+				font: 14px/1 "Spartan";
+			}
+			button {
+				width: 100%;
+				height: 40px;
+				border: 1px solid #fff;
+				background: #111;
+				color: #fff;
+				box-sizing: border-box;
+				margin-bottom: 20px;
+			}
+			input[type="checkbox"]{
+				width: 20px; height: 20px;
+				vertical-align: middle; 
+				
+			}
+			
 			label {
-				font: bold 13px/1 "Spartan";
+				font: 13px/1 "Noto Sans KR";
 				margin-left: 4px;
+				color: #aaa;
+				
+			}
+			a {
+				display: inline-block;
+				position: absolute;
+				bottom: 30px;
+				left: 50%;
+				transform: translateX(-50%);
+				font: 13px/1 "Noto Sans KR";
+				color: #aaa;
+				border-bottom: 1px solid #aaa;
 			}
 		}
 		.close {
-			float: right;
-			font: 14px/1 "Noto Sans KR";
+			width: 25px;
+			height: 25px;
+			background: rgb(66, 66, 73);
+			border-radius: 50%;
+			border:1px solid #ccc;
+			text-align: center;
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			font: 14px/25px "Noto Sans KR";
 			color: #fff;
 		}
 	}
