--- a/css/style.css
+++ b/css/style.css
@@ -2601,80 +2601,84 @@ fieldset {
       margin-top: 60px;
       display: flex;
       justify-content: space-between; }
-      #content .inner .wrap article:nth-of-type(1) h2 {
+      #content .inner .wrap article.box1 h2 {
         font: bold 25px/1.5 "Spartan";
         color: #111;
         margin-bottom: 30px;
         margin-top: 80px; }
-      #content .inner .wrap article:nth-of-type(1) p {
+      #content .inner .wrap article.box1 p {
         font: 15px/1.5 "Spartan";
         color: #888; }
-      #content .inner .wrap article:nth-of-type(2) {
+      #content .inner .wrap article.box2 {
         width: 200px; }
-        #content .inner .wrap article:nth-of-type(2) ul {
+        #content .inner .wrap article.box2 ul {
           display: flex;
           flex-direction: column;
           align-items: center;
           margin-top: 80px; }
-          #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(1) {
+          #content .inner .wrap article.box2 ul li:nth-of-type(1) {
             font: bold 17px/1 "Spartan";
             color: #111;
             margin-bottom: 40px; }
-          #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(2) {
+          #content .inner .wrap article.box2 ul li:nth-of-type(2) {
             margin-bottom: 30px;
             font: bold 15px/1 "Spartan";
             color: #111; }
-            #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(2) i {
+            #content .inner .wrap article.box2 ul li:nth-of-type(2) i {
               margin-right: 20px;
               font-size: 25px;
               color: #dd7b8b; }
-          #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(3) {
+          #content .inner .wrap article.box2 ul li:nth-of-type(3) {
             margin-bottom: 30px;
             font: bold 15px/1 "Spartan";
             color: #111; }
-            #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(3) i {
+            #content .inner .wrap article.box2 ul li:nth-of-type(3) i {
               margin-right: 20px;
               font-size: 25px;
               color: #dd7b8b; }
-          #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(4) {
+          #content .inner .wrap article.box2 ul li:nth-of-type(4) {
             font: bold 15px/1 "Spartan";
             color: #111; }
-            #content .inner .wrap article:nth-of-type(2) ul li:nth-of-type(4) i {
+            #content .inner .wrap article.box2 ul li:nth-of-type(4) i {
               margin-right: 20px;
               font-size: 25px;
               color: #dd7b8b; }
-      #content .inner .wrap article:nth-of-type(3) {
+      #content .inner .wrap article.box3 {
         width: 5%; }
-        #content .inner .wrap article:nth-of-type(3) ul {
+        #content .inner .wrap article.box3 ul {
           margin-top: 80px;
           width: 80px; }
-          #content .inner .wrap article:nth-of-type(3) ul li {
+          #content .inner .wrap article.box3 ul li {
             width: 80px;
             height: 90px;
-            margin-bottom: 10px; }
-            #content .inner .wrap article:nth-of-type(3) ul li:nth-of-type(1) {
-              background: url(../img/phone02.jpg) no-repeat center/cover; }
-            #content .inner .wrap article:nth-of-type(3) ul li:nth-of-type(2) {
+            margin-bottom: 10px;
+            opacity: 0.4;
+            box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); }
+            #content .inner .wrap article.box3 ul li:nth-of-type(1) {
               background: url(../img/phone03.jpg) no-repeat center/cover; }
-            #content .inner .wrap article:nth-of-type(3) ul li:nth-of-type(3) {
+            #content .inner .wrap article.box3 ul li:nth-of-type(2) {
+              background: url(../img/phone02.jpg) no-repeat center/cover; }
+            #content .inner .wrap article.box3 ul li:nth-of-type(3) {
               background: url(../img/phone04.jpg) no-repeat center/cover;
               margin-bottom: 0; }
-      #content .inner .wrap article:nth-of-type(4) {
+            #content .inner .wrap article.box3 ul li.on {
+              opacity: 1; }
+      #content .inner .wrap article.box4 {
         width: 350px;
         height: 450px;
         position: relative; }
-        #content .inner .wrap article:nth-of-type(4) .pic {
+        #content .inner .wrap article.box4 .pic {
           width: 100%;
           height: 100%;
           background: url(../img/phone03.jpg) no-repeat center/cover; }
-          #content .inner .wrap article:nth-of-type(4) .pic span {
+          #content .inner .wrap article.box4 .pic span {
             font: bold 25px/1.7 "arial";
             color: #fff;
             margin: 0 auto;
             position: absolute;
             top: 60%;
             left: 30px; }
-          #content .inner .wrap article:nth-of-type(4) .pic .icon {
+          #content .inner .wrap article.box4 .pic .icon {
             position: absolute;
             bottom: 0px;
             right: 0px;
@@ -2684,9 +2688,9 @@ fieldset {
             text-align: center;
             font-size: 20px;
             line-height: 80px; }
-            #content .inner .wrap article:nth-of-type(4) .pic .icon i {
+            #content .inner .wrap article.box4 .pic .icon i {
               color: #dd7b8b; }
-        #content .inner .wrap article:nth-of-type(4) p {
+        #content .inner .wrap article.box4 p {
           margin-top: 20px;
           font: bold 13px/1 "Spartan";
           text-align: left; }
