--- a/css/style.css
+++ b/css/style.css
@@ -2397,7 +2397,7 @@ fieldset {
 #podcasts {
   width: 100%;
   padding: 200px 0;
-  background: rgba(255, 252, 251, 0.8); }
+  background: #fff; }
   #podcasts .inner {
     width: 1180px;
     margin: 0 auto;
@@ -2583,7 +2583,7 @@ fieldset {
 #content {
   width: 100%;
   padding: 50px 0px 300px;
-  background: rgba(255, 252, 251, 0.8); }
+  background: #fff; }
   #content .inner {
     width: 1200px;
     margin: 0 auto;
