--- a/scss/style.scss
+++ b/scss/style.scss
@@ -759,7 +759,7 @@ $mobile: 539px;
 #podcasts {
 	width: 100%;
 	padding: 200px 0;
-	background: rgba(255, 252, 251, 0.8);
+	background: #fff;
 
 	.inner {
 		width: 1180px;
@@ -1014,8 +1014,8 @@ $mobile: 539px;
 #content {
 	width: 100%;
 	padding: 50px 0px 300px;
-	background: rgba(255, 252, 251, 0.8);
-
+	// background: rgba(255, 252, 251, 0.8);
+	background: #fff;
 	.inner {
 		width: 1200px;
 		margin: 0 auto;
